# weighted-string

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/wstr/: dna_weighted_string.hpp  weighted_char.hpp  weighted_element.hpp  weighted_string.cpp  weighted_string.h  weighted_string.hpp  weighted_string_from_file.cpp
test/: CMakeLists.txt  config.h.in  readme_example_test.cpp  test_dna_weighted_string.cpp  test_weighted_char.cpp  test_weighted_element.cpp  test_weighted_string.cpp  types.h  weighted_element_test.cpp  weighted_string_test.cpp
test/file/: dna1.txt  dna2.txt  dna3.txt  readme_gaps  readme_precision  readme_strict  ws1.txt  ws2.txt  wsc1.txt  wsv2.txt
